--- a/css/layout.css
+++ b/css/layout.css
@@ -27,6 +27,13 @@ body {
   gap: 96px;
 }
 
+/* Main Content with less Gap*/
+#tight {
+  margin: 225px 425px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
 
 
 
@@ -57,6 +64,13 @@ body {
   flex-basis: 50%;
 }
 
+#portfolio-header-social-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 25px;
+}
+
 
 
 
@@ -74,7 +88,24 @@ body {
   gap: 34px;
 }
 
+/* Skills Section */
+#my-skills-section {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
 
+.skills-section-content {
+  display: flex;
+  flex-direction: column;
+  gap: 34px;
+}
+
+.two-skills-section-content{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
 
 
 /* Project Section */
@@ -94,7 +125,8 @@ body {
     /* Project Cards */
 
     .project-card {
-      max-width: calc((100% - 32px) / 3);
+      /*max-width: calc((100% - 32px) / 3);*/
+      max-width: 100%;
       display: flex;
       flex-direction: column;
       gap: 34px;
@@ -108,7 +140,7 @@ body {
 
     .project-image {
       width: 100%;
-      height: 200px;
+      /*height: 300px;*/
       object-fit: cover;
       object-position: center;
     }
@@ -160,6 +192,30 @@ body {
       display: flex;
       flex-direction: column;
       gap: 10px;
+    }
+
+    .gallery-image-container-gif {
+      width: 80%;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-direction: column;
+      align-self: center;
+    }
+
+    .gallery-image-container-results {
+      width: 60%;
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .latex-image {
+      display: flex;
+      width: 45%;
+      align-self: center;
     }
 
     .gallery-image-container.half-width {
